--- a/tentang/tentang.html
+++ b/tentang/tentang.html
@@ -17,35 +17,21 @@
     <link rel="stylesheet" href="../css/main.css" />
 
     <style>
-      /* ===============================
-         HERO SECTION (Standard Lontara)
-         Jarak aman 180px agar tidak tertutup header
-      ================================ */
+      /* --- HERO SECTION: Mencegah Overlap (Padding 180px) --- */
       .hero-about {
         padding: 180px 0 100px;
         background: linear-gradient(to bottom, #f8fafc, #f1f5f9);
         text-align: center;
         border-bottom: 1px solid var(--border);
       }
-      .hero-about h1 {
-        font-size: 3.2rem;
-        margin-bottom: 24px;
-        color: var(--primary);
-        font-weight: 800;
-      }
+      .hero-about h1 { font-size: 3.2rem; margin-bottom: 24px; color: var(--primary); font-weight: 800; }
+      .hero-about p { font-size: 1.25rem; color: var(--text-muted); max-width: 800px; margin: 0 auto; line-height: 1.7; }
 
-      /* ===============================
-         VISI MISI (Internal Padding 60px)
-         Konsisten dengan arsitektur Download Card
-      ================================ */
-      .vision-mission {
-        margin-top: -60px;
-        position: relative;
-        z-index: 10;
-      }
+      /* --- VISI MISI: Internal Padding 60px (Arsitektur Download Card) --- */
+      .vision-mission-wrapper { margin-top: -60px; position: relative; z-index: 10; }
       .vm-card {
         background: white;
-        padding: 60px; /* PAD YANG ANDA SUKAI */
+        padding: 60px; /* Golden Padding */
         border-radius: 32px;
         box-shadow: 0 40px 80px rgba(0, 0, 0, 0.05);
         border: 1px solid var(--border);
@@ -53,43 +39,9 @@
         transition: 0.3s ease;
         height: 100%;
       }
-      .vm-card:hover {
-        transform: translateY(-8px);
-        border-color: var(--accent);
-      }
-      .vm-card h2 { color: var(--accent); margin-bottom: 20px; font-weight: 800; }
+      .vm-card h2 { color: var(--accent); margin-bottom: 20px; font-weight: 800; font-size: 1.8rem; }
 
-      /* ===============================
-         FOUNDER SECTION
-      ================================ */
-      .founder-section {
-        display: grid;
-        grid-template-columns: 1fr 1.3fr;
-        gap: 80px;
-        align-items: center;
-        padding: 120px 0;
-      }
-      .founder-image-container {
-        width: 100%;
-        max-width: 450px;
-        margin: 0 auto;
-        border-radius: 24px;
-        overflow: hidden;
-        box-shadow: 0 20px 40px rgba(0, 0, 0, 0.12);
-      }
-      .founder-image-container img {
-        width: 100%;
-        height: auto;
-        display: block;
-        object-fit: contain;
-      }
-      .founder-text { text-align: center; } /* Sesuai script aman Anda */
-      .founder-text h2 { font-size: 2.8rem; margin-bottom: 25px; color: var(--primary); font-weight: 800; }
-
-      /* ===============================
-         MOBILE SIDEBAR GLASS EFFECT
-         Hanya pada sidebar
-      ================================ */
+      /* --- MOBILE MENU: Sidebar Glass Effect --- */
       .nav-overlay {
         position: fixed;
         inset: 0;
@@ -106,17 +58,31 @@
           width: 300px;
           height: 100vh;
           background: rgba(255, 255, 255, 0.8);
-          backdrop-filter: blur(20px);
+          backdrop-filter: blur(20px); /* Efek Gelas Lokal */
           -webkit-backdrop-filter: blur(20px);
           flex-direction: column;
           justify-content: center;
           padding: 40px;
           gap: 25px;
-          z-index: 3100;
+          box-shadow: -10px 0 30px rgba(0,0,0,0.1);
           transition: 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+          z-index: 3100;
         }
         .nav.active { right: 0; }
         .nav-close { display: block !important; position: absolute; top: 30px; right: 30px; }
+      }
+
+      /* Founder Section Styling */
+      .founder-section { display: grid; grid-template-columns: 1fr 1.3fr; gap: 80px; align-items: center; padding: 120px 0; }
+      .founder-image-container { border-radius: 24px; overflow: hidden; box-shadow: 0 20px 40px rgba(0, 0, 0, 0.12); }
+      .founder-image-container img { width: 100%; height: auto; display: block; object-fit: contain; }
+      .founder-text { text-align: center; }
+      .founder-text h2 { font-size: 2.8rem; margin-bottom: 25px; color: var(--primary); font-weight: 800; }
+
+      /* CTA Section Styling */
+      .section-cta-green { background-color: #123b3a !important; color: white !important; text-align: center; padding: 100px 0; }
+
+      @media (max-width: 992px) {
         .founder-section { grid-template-columns: 1fr; }
         .vm-card { padding: 40px 25px; }
       }
@@ -124,7 +90,7 @@
   </head>
 
   <body>
-    <div class="nav-overlay" id="nav-overlay" onclick="closeMenu()"></div>
+    <div class="nav-overlay" id="nav-overlay"></div>
 
     <header class="header" id="header">
       <div class="progress-bar" id="progress-bar"></div>
@@ -136,8 +102,8 @@
         </div>
 
         <nav class="nav" id="nav-menu">
-          <button class="nav-close" id="nav-close" onclick="closeMenu()" style="display:none;">
-            <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="#123b3a" stroke-width="2"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
+          <button class="nav-close" id="nav-close" aria-label="Tutup Menu">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
           </button>
           <div class="nav-item"><a href="../layanan/layanan.html">Layanan</a></div>
           <div class="nav-item"><a href="../portofolio/portofolio.html">Portofolio</a></div>
@@ -145,12 +111,15 @@
           <div class="nav-item"><a href="../publikasi/publikasi.html">Publikasi</a></div>
           <div class="nav-item"><a href="../aset-digital/aset-digital.html">Aset Digital</a></div>
           <div class="nav-item"><a href="tentang.html" class="active">Tentang</a></div>
-          <div class="nav-item nav-item-cta"><a href="../kontak/kontak.html" class="nav-link-cta">Kontak</a></div>
+
+          <div class="nav-item nav-item-cta">
+            <a href="../kontak/kontak.html" class="nav-link-cta">Kontak</a>
+          </div>
         </nav>
 
         <div class="nav-actions"></div>
 
-        <button class="nav-toggle" id="nav-toggle" onclick="toggleMenu()" aria-label="Buka Menu">
+        <button class="nav-toggle" id="nav-toggle" aria-label="Buka Menu">
           <span></span><span></span><span></span>
         </button>
       </div>
@@ -164,9 +133,9 @@
         </div>
       </section>
 
-      <section class="section" style="padding-top: 0">
+      <section class="vision-mission-wrapper">
         <div class="container">
-          <div class="vision-mission grid-2">
+          <div class="grid-2">
             <div class="vm-card reveal-init">
               <h2>Visi Kami</h2>
               <p>Menjadi pelopor infrastruktur data spasial dalam pengelolaan lingkungan hidup, memastikan setiap kebijakan didasarkan pada perhitungan ekologis yang presisi.</p>
@@ -201,7 +170,7 @@
         </div>
       </section>
 
-      <section class="section-cta-green" style="background:#123b3a; color:white; text-align:center; padding:100px 0;">
+      <section class="section-cta-green">
         <div class="container">
           <h2 class="reveal-init">Mari Berkolaborasi Demi Lingkungan yang Cerdas</h2>
           <p class="reveal-init" style="margin:20px 0 40px; opacity:0.9;">Diskusikan kebutuhan riset atau implementasi sistem intelijen spasial instansi Anda bersama kami.</p>
@@ -223,19 +192,27 @@
     </footer>
 
     <script>
-      function toggleMenu() {
-        document.getElementById('nav-menu').classList.add('active');
-        document.getElementById('nav-overlay').style.display = 'block';
+      const navMenu = document.getElementById('nav-menu');
+      const navOverlay = document.getElementById('nav-overlay');
+      const navToggle = document.getElementById('nav-toggle');
+      const navClose = document.getElementById('nav-close');
+
+      navToggle.addEventListener('click', () => {
+        navMenu.classList.add('active');
+        navOverlay.style.display = 'block';
         document.body.style.overflow = 'hidden';
-      }
-      function closeMenu() {
-        document.getElementById('nav-menu').classList.remove('active');
-        document.getElementById('nav-overlay').style.display = 'none';
+      });
+
+      const closeMenu = () => {
+        navMenu.classList.remove('active');
+        navOverlay.style.display = 'none';
         document.body.style.overflow = 'auto';
-      }
+      };
+
+      navClose.addEventListener('click', closeMenu);
+      navOverlay.addEventListener('click', closeMenu);
     </script>
     <script src="../js/utils.js"></script>
     <script src="../js/animation.js"></script>
-    <script src="../js/main.js"></script>
   </body>
 </html>
